Fix table listing wrong padding

--- a/src/style/layout/_listing.scss
+++ b/src/style/layout/_listing.scss
@@ -172,9 +172,7 @@ table.listing {
 
         // add padding
         &:not(.controls-col):not(.notification-col) {
-            @include sizes.make-vertical-row-padding();
-            @include sizes.make-gap(padding, horizontal);
-            @include sizes.make-gap(padding, right);
+            @include sizes.make-vertical-row-padding(horizontal);
         }
     }
 }
